# flitsers

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile-cron.dev  Dockerfile.jupyter  Procfile  README.md  app.py  classes.py  connect.py  consts.py  coordinates.py  copy_db.py  docker-compose.yml  model.py  pyproject.toml  requirements-cron-dev.txt  requirements-flitsers-dev.txt  requirements-flitsers.txt  requirements-jupyter.txt  requirements-prod.txt  requirements.txt  routes.py  scrape_towns.py  scrapefunctions.py  scraper.py  scraper.sh  scraper_tor.py
app/: Dockerfile  app.py  consts.py  coordinates.py  copy_db.py  db.py  entrypoint.sh  flitsers.db  model.py  requirements.txt  routes.py  scrapefunctions.py  scraper.py  scraper.sh  split_coordinates.py
app/schemas/: melding.py
app/scripts/: 002_add_column_locatie.sql  003_coordinates_split.sql  export_to_csv.py  scrape_towns.py  split_coordinates.py
app/static/js/: classes.js
app/templates/: content.html  home.html  index.html  layout.html
docs/: development.md  production.md
migration_scripts/: 000_create db.sql  001_dots_to_commas.sql  002_add_column_locatie.sql  003_coordinates_split.sql  004_weather.sql  005-time_fix.sql  006_zijde_to_rijrichting.sql  create db.sql  towns.sql  zzz_run_db.sh
notebook/: .gitignore  README.md
notebook/config/: jupyter_server_config.py
notebook/work/: encoding.ipynb  export.ipynb  extra.ipynb  prediction.ipynb  prediction_preparation.ipynb  preparation.ipynb  training.ipynb  validation.ipynb
notebook/work/py/: consts.py  db.py  utils.py
scripts/: create db.sql  export_to_csv.py
static/css/: main.css
static/js/: chart.js  classes.js  custom.js  heatmap.js  map.js
templates/: content.html  home.html  index.html  layout.html
