[tool.poetry]
name = "flitserdata"
version = "0.1.0"
description = "Data over flitsers in Nederland"
authors = ["Simon Verhoek <simon@simonic.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
environs = "^9.5.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.3.0"
pysocks = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
